--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-2": "~6.24.1",
     "dotenv": "~5.0.1",
     "express": "~4.16.3",
+    "express-session": "^1.15.6",
     "mustache": "~2.3.0",
     "mustache-express": "~1.2.5",
     "react": "~15.6.0",
