--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "babel-preset-env": "~1.6.1",
     "babel-preset-react": "~6.24.1",
     "babel-preset-stage-2": "~6.24.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "~5.0.1",
     "express": "~4.16.3",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.5",
     "mustache": "~2.3.0",
     "mustache-express": "~1.2.5",
     "react": "~15.6.0",
